--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "description": "",
   "dependencies": {
+    "angular-ui-router": "^1.0.3",
     "body-parser": "^1.17.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
